--- a/main_en.tex
+++ b/main_en.tex
@@ -104,7 +104,7 @@
 \begin{document}
 
 \begin{center}
-\textbf{\huge Корж Владислав} \\ \vspace{5pt}
+\textbf{\huge Korzh Vladislav} \\ \vspace{5pt}
 \small
 \textcolor{violet}{\faMobile} \hspace{.5pt} \href{tel:+79129150633}{+7 912 915 06 33}
 $|$
@@ -116,7 +116,7 @@ $|$
 $|$
 \textcolor{violet}{\faGithub} \hspace{.5pt} \href{https://github.com/sold666}{sold666}
 $|$
-\textcolor{violet}{\faMapMarker} \hspace{.5pt} \href{https://maps.app.goo.gl/VvvW63dZxLZH6iVR6}{Санкт-Петербург, Россия}
+\textcolor{violet}{\faMapMarker} \hspace{.5pt} \href{https://maps.app.goo.gl/VvvW63dZxLZH6iVR6}{Saint Petersburg, Russia}
 \end{center}
 
 \section{Education}
@@ -129,17 +129,17 @@ $|$
 \section{Additional Education}
 \resumeSubHeadingListStart
 \resumeSubheadingAdditional
-{Course "Java Developer of High-Load Applications" \ VK Educational Center at Polytechnic}{09.2022 -- 02.2023}
+{Course "Java Developer of High-Load Applications" \\ VK Educational Center at Polytechnic}{09.2022 -- 02.2023}
 \resumeSubHeadingListEnd
 
 \resumeSubHeadingListStart
 \resumeSubheadingAdditional
-{Course "Web Development with Java Spring Framework" \ Peter the Great St. Petersburg Polytechnic University}{10.2022}
+{Course "Web Development with Java Spring Framework" \\ Peter the Great St. Petersburg Polytechnic University}{10.2022}
 \resumeSubHeadingListEnd
 
 \resumeSubHeadingListStart
 \resumeSubheadingAdditional
-{Course "The basics of Python programming" \ LETPY}{09.2022 -- 02.2023}
+{Course "The basics of Python programming" \\ LETPY}{09.2022 -- 02.2023}
 \resumeSubHeadingListEnd
 
 \section{Experience}
@@ -150,7 +150,7 @@ $|$
 \bulletItem{Work in the automation testing department involving development of End-to-End tests for a billing system serving one of the leading mobile network operators in the country}
 \bulletItem{Refactoring of testing framework codebase, development of Unit tests, analysis of Allure reports. Working with PostgreSQl databases, builds in Jenkins}
 \bulletItem{Implementation of "LogRunMan" maven library for collecting information on autotest execution}
-\bulletItem{Usage of SOAP, REST API protocols}
+\bulletItem{Usage of REST API, SOAP protocol}
 \resumeItemListEnd
 
 \resumeExpItem {\lineSeparatedText{Sreda Solutions}{Intern Software Engineer}}{06.2023 -- 07.2023}
