change additional experience

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,11pt]{report}
+\documentclass[a4paper,9pt]{report}
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[russian,english]{babel}
@@ -177,7 +177,7 @@ $|$
 
 \textbf{Языки программирования:}{ Java, SQL, Python, C++, JavaScript, Bash} \\ \vspace{3pt}
 
-\textbf{Технологии:}{ Spring Boot, PostgreSQl, JUnit, Jenkins, Git, SVN, Apache Maven, Docker, K8s, Kafka} \\ \vspace{3pt}
+\textbf{Технологии:}{ Spring Boot, PostgreSQl, JUnit, Jenkins, Git, SVN, Apache Maven, Docker, K8s, Kafka, Prometheus, Grafana} \\ \vspace{3pt}
 
 \textbf{Инструменты:}{ IntelliJ IDEA, GitHub, GitLab, Postman, Allure, SoapUI, Jira, Trello, Kaiten, Slack} \\ \vspace{3pt}
 
@@ -188,11 +188,17 @@ $|$
 \section{Дополнительно}
 
 \begin{itemize}
-\bulletItem{Опыт написания модульных и интеграционных тестов с использованием Mockito и Hamcrest}
+\bulletItem{Опыт написания модульных и интеграционных тестов с использованием Mockito, Hamcrest, Surefire}
 \bulletItem{Опыт написания документации с использованием Markdown, AsciiDoc и LaTeX}
+\bulletItem{Опыт разработки и ведения команды Android-приложения (Kotlin, Gradle, Material Design, Firebase, Figma, Coroutines, Retrofit, Jetpack Navigation, Picasso)}
+\begin{itemize}
+\bulletItem Руководство командой разработки: планирование, координация и контроль выполнения задач
+\bulletItem Продумывание логики приложения: архитектура, функциональные требования, оптимизация процессов
+\bulletItem Реализация дизайн-составляющей: взаимодействие с дизайнером из OK, внедрение UI/UX решений, обеспечение соответствия дизайна техническим требованиям
+\end{itemize}
 \bulletItem{Опыт разработки и верстки фронтенд-части веб-приложений (Node.js, Figma, HTML, CSS, Parcel, Chart.js)}
 \bulletItem{Опыт разработки десктопных приложений (Java, JavaFX, JDBC, Microsoft SQL Server)}
-\bulletItem{Опыт разработки Android-приложений (Kotlin, Gradle, Material Design, Firebase, Figma, Coroutines, Retrofit, Jetpack Navigation, Picasso)}
+\bulletItem{Опыт разработки телеграм-ботов (Java, Spring Boot, PostgreSQl, интеграция с сторонним API, Emoji Java, TelegramBots, Jacoco)}
 \bulletItem{Знание английского языка: Intermediate}
 \end{itemize}
 
