--- a/main_en.tex
+++ b/main_en.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,11pt]{report}
+\documentclass[a4paper,9pt]{report}
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[russian,english]{babel}
@@ -177,7 +177,7 @@ $|$
 
 \textbf{Programming Languages:}{ Java, SQL, Python, C++, JavaScript, Bash} \ \vspace{3pt}
 
-\textbf{Technologies:}{ Spring Boot, PostgreSQl, JUnit, Jenkins, Git, SVN, Apache Maven, Docker, K8s, Kafka} \ \vspace{3pt}
+\textbf{Technologies:}{ Spring Boot, PostgreSQl, JUnit, Jenkins, Git, SVN, Apache Maven, Docker, K8s, Kafka, Prometheus, Grafana} \ \vspace{3pt}
 
 \textbf{Tools:}{ IntelliJ IDEA, GitHub, GitLab, Postman, Allure, SoapUI, Jira, Trello, Kaiten, Slack} \ \vspace{3pt}
 
@@ -187,12 +187,18 @@ $|$
 
 \section{Additional}
 \begin{itemize}
-\bulletItem{Experience in writing modular and integration tests using Mockito and Hamcrest}
-\bulletItem{Experience in writing documentation using Markdown, AsciiDoc, and LaTeX}
-\bulletItem{Experience in developing and designing frontend of web applications (Node.js, Figma, HTML, CSS, Parcel, Chart.js)}
+\bulletItem{Experience writing unit and integration tests using Mockito, Hamcrest, Surefire}
+\bulletItem{Experience writing documentation using Markdown, AsciiDoc and LaTeX}
+\bulletItem{Experience in developing and introducing commands for Android applications (Kotlin, Gradle, Material Design, Firebase, Figma, Coroutines, Retrofit, Jetpack Navigation, Picasso)}
+\begin{itemize}
+\bulletItem Management of the development team: planning, coordination and control of task execution
+\bulletItem Thinking through application logic: architecture, international requirements, process optimization
+\bulletItem Implementation of the design component: interaction with the designer from OK, implementation of UI/UX solutions, ensuring design compliance with technical requirements
+\end{itemize}
+\bulletItem{Experience in development and layout of front-end parts of web applications (Node.js, Figma, HTML, CSS, Parcel, Chart.js)}
 \bulletItem{Experience in developing desktop applications (Java, JavaFX, JDBC, Microsoft SQL Server)}
-\bulletItem{Experience in developing Android applications (Kotlin, Gradle, Material Design, Firebase, Figma, Coroutines, Retrofit, Jetpack Navigation, Picasso)}
-\bulletItem{English language proficiency: Intermediate}
+\bulletItem{Experience in developing telegram bots (Java, Spring Boot, PostgreSQl, integration with external API, Emoji Java, TelegramBots, Jacoco)}
+\bulletItem{Knowledge of English: intermediate level}
 \end{itemize}
 
 \end{document}
