--- a/main.tex
+++ b/main.tex
@@ -145,7 +145,7 @@ $|$
 \section{Опыт}
 \resumeSubHeadingListStart
 
-\resumeExpItem {\lineSeparatedText{ООО "НПФ Беркут" (Bercut Ltd.)}{Младший инженер-тестировщик (QA)}}{07.2023 -- ...}
+\resumeExpItem {\lineSeparatedText{ООО "НПФ Беркут" (Bercut Ltd.)}{Java-разработчик}}{07.2023 -- ...}
 \resumeItemListStart
 \bulletItem{Работа в отделе автоматизации тестирования включает разработку End-to-End тестов для биллинговой системы, обслуживающую одного из ведущих операторов сотовой связи страны}
 \bulletItem{Рефакторинг кодовой базы тестирующего фреймворка, разработка Unit-тестов, анализ Allure отчетов. Работа с БД PostgreSQl, сборками в Jenkins}
