--- a/main_en.tex
+++ b/main_en.tex
@@ -145,7 +145,7 @@ $|$
 \section{Experience}
 \resumeSubHeadingListStart
 
-\resumeExpItem {\lineSeparatedText{Bercut Ltd.}{Junior QA Engineer}}{07.2023 -- ...}
+\resumeExpItem {\lineSeparatedText{Bercut Ltd.}{Java developer}}{07.2023 -- ...}
 \resumeItemListStart
 \bulletItem{Work in the automation testing department involving development of End-to-End tests for a billing system serving one of the leading mobile network operators in the country}
 \bulletItem{Refactoring of testing framework codebase, development of Unit tests, analysis of Allure reports. Working with PostgreSQl databases, builds in Jenkins}
