--- a/main.tex
+++ b/main.tex
@@ -142,7 +142,7 @@ $|$
 {Курс "The basics of Python programming" \\ LETPY}{09.2022 -- 02.2023}
 \resumeSubHeadingListEnd
 
-\section{Опыт}
+\section{Опыт 3 года}
 \resumeSubHeadingListStart
 
 \resumeExpItem {\lineSeparatedText{ООО "НПФ Беркут" (Bercut Ltd.)}{Java-разработчик}}{07.2023 -- ...}
@@ -165,6 +165,14 @@ $|$
 \bulletItem{Интеграция, конфигурация и мониторинг Bare-metal CSI Driver с помощью технологий Prometheus, Grafana}
 \bulletItem{Изучение работы с K8s, Docker}
 \bulletItem{Работа с bash-скриптами}
+\resumeItemListEnd
+
+\resumeExpItem {\lineSeparatedText{Resume-Bot}{Java-разработчик}}{09.2023 -- 06.2024}
+\resumeItemListStart
+\bulletItem{Написание всей клиентской части бота (команды, состояния, диалог с пользователем, логика записи информации в БД)}
+\bulletItem{Написание FS, HLD документации}
+\bulletItem{Настройка GitHub CI/CD}
+\bulletItem{Разработка Unit-тестов, интеграционных тестов, работа с HH API и LaTeX}
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
@@ -191,11 +199,11 @@ $|$
 \bulletItem{Опыт написания модульных и интеграционных тестов с использованием Mockito, Hamcrest, Surefire}
 \bulletItem{Опыт написания документации с использованием Markdown, AsciiDoc и LaTeX}
 \bulletItem{Опыт разработки и ведения команды Android-приложения (Kotlin, Gradle, Material Design, Firebase, Figma, Coroutines, Retrofit, Jetpack Navigation, Picasso)}
-\begin{itemize}
-\bulletItem Руководство командой разработки: планирование, координация и контроль выполнения задач
-\bulletItem Продумывание логики приложения: архитектура, функциональные требования, оптимизация процессов
-\bulletItem Реализация дизайн-составляющей: взаимодействие с дизайнером из OK, внедрение UI/UX решений, обеспечение соответствия дизайна техническим требованиям
-\end{itemize}
+%\begin{itemize}
+%\bulletItem Руководство командой разработки: планирование, координация и контроль выполнения задач
+%\bulletItem Продумывание логики приложения: архитектура, функциональные требования, оптимизация процессов
+%\bulletItem Реализация дизайн-составляющей: взаимодействие с дизайнером из OK, внедрение UI/UX решений, обеспечение соответствия дизайна техническим требованиям
+%\end{itemize}
 \bulletItem{Опыт разработки и верстки фронтенд-части веб-приложений (Node.js, Figma, HTML, CSS, Parcel, Chart.js)}
 \bulletItem{Опыт разработки десктопных приложений (Java, JavaFX, JDBC, Microsoft SQL Server)}
 \bulletItem{Опыт разработки телеграм-ботов (Java, Spring Boot, PostgreSQl, интеграция с сторонним API, Emoji Java, TelegramBots, Jacoco)}
