--- a/main_en.tex
+++ b/main_en.tex
@@ -142,7 +142,7 @@ $|$
 {Course "The basics of Python programming" \\ LETPY}{09.2022 -- 02.2023}
 \resumeSubHeadingListEnd
 
-\section{Experience}
+\section{Experience 3 years}
 \resumeSubHeadingListStart
 
 \resumeExpItem {\lineSeparatedText{Bercut Ltd.}{Java developer}}{07.2023 -- ...}
@@ -165,6 +165,14 @@ $|$
 \bulletItem{Integration, configuration, and monitoring of Bare-metal CSI Driver using Prometheus, Grafana technologies}
 \bulletItem{Learning K8s, Docker}
 \bulletItem{Working with bash scripts}
+\resumeItemListEnd
+
+\resumeExpItem {\lineSeparatedText{Resume-Bot}{Java developer}}{09.2023 -- 05.2024}
+\resumeItemListStart
+\bulletItem{Writing the entire client part of the bot (commands, states, dialog with the user, logic for writing information to the DB)}
+\bulletItem{Writing FS, HLD}
+\bulletItem{Configuring GitHub CI/CD}
+\bulletItem{Developing Unit tests, integration tests, working with HH API and LaTeX}
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
@@ -190,11 +198,11 @@ $|$
 \bulletItem{Experience writing unit and integration tests using Mockito, Hamcrest, Surefire}
 \bulletItem{Experience writing documentation using Markdown, AsciiDoc and LaTeX}
 \bulletItem{Experience in developing and introducing commands for Android applications (Kotlin, Gradle, Material Design, Firebase, Figma, Coroutines, Retrofit, Jetpack Navigation, Picasso)}
-\begin{itemize}
-\bulletItem Management of the development team: planning, coordination and control of task execution
-\bulletItem Thinking through application logic: architecture, international requirements, process optimization
-\bulletItem Implementation of the design component: interaction with the designer from OK, implementation of UI/UX solutions, ensuring design compliance with technical requirements
-\end{itemize}
+%\begin{itemize}
+%\bulletItem Management of the development team: planning, coordination and control of task execution
+%\bulletItem Thinking through application logic: architecture, international requirements, process optimization
+%\bulletItem Implementation of the design component: interaction with the designer from OK, implementation of UI/UX solutions, ensuring design compliance with technical requirements
+%\end{itemize}
 \bulletItem{Experience in development and layout of front-end parts of web applications (Node.js, Figma, HTML, CSS, Parcel, Chart.js)}
 \bulletItem{Experience in developing desktop applications (Java, JavaFX, JDBC, Microsoft SQL Server)}
 \bulletItem{Experience in developing telegram bots (Java, Spring Boot, PostgreSQl, integration with external API, Emoji Java, TelegramBots, Jacoco)}
