add some changes in cv

--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 
 \titleformat{\section}{
     \vspace{-4pt}\raggedright\large\bfseries
-}{}{0em}{}[\color{violet}\titlerule \vspace{-5pt}]
+}{}{0em}{}[\color{YellowGreen}\titlerule \vspace{-5pt}]
 
 \pdfgentounicode=1
 
@@ -106,17 +106,17 @@
 \begin{center}
 \textbf{\huge Корж Владислав} \\ \vspace{5pt}
 \small
-\textcolor{violet}{\faMobile} \hspace{.5pt} \href{tel:+79129150633}{+7 912 915 06 33}
+\textcolor{YellowGreen}{\faMobile} \hspace{.5pt} \href{tel:+79129150633}{+7 912 915 06 33}
 $|$
-\textcolor{violet}{\faAt} \hspace{.5pt} \href{mailto:korch937@mail.ru}{korch937@mail.ru}
+\textcolor{YellowGreen}{\faAt} \hspace{.5pt} \href{mailto:korch937@mail.ru}{korch937@mail.ru}
 $|$
-\textcolor{violet}{\faTelegram} \hspace{.5pt} \href{https://t.me/solddddd}{solddddd}
+\textcolor{YellowGreen}{\faTelegram} \hspace{.5pt} \href{https://t.me/solddddd}{solddddd}
 $|$
-\textcolor{violet}{\faLinkedin} \hspace{.5pt} \href{https://www.linkedin.com/in/sold666/}{sold666}
+\textcolor{YellowGreen}{\faLinkedin} \hspace{.5pt} \href{https://www.linkedin.com/in/sold666/}{sold666}
 $|$
-\textcolor{violet}{\faGithub} \hspace{.5pt} \href{https://github.com/sold666}{sold666}
+\textcolor{YellowGreen}{\faGithub} \hspace{.5pt} \href{https://github.com/sold666}{sold666}
 $|$
-\textcolor{violet}{\faMapMarker} \hspace{.5pt} \href{https://maps.app.goo.gl/VvvW63dZxLZH6iVR6}{Санкт-Петербург, Россия}
+\textcolor{YellowGreen}{\faMapMarker} \hspace{.5pt} \href{https://maps.app.goo.gl/VvvW63dZxLZH6iVR6}{Санкт-Петербург, Россия}
 \end{center}
 
 \section{Образование}
@@ -124,6 +124,10 @@ $|$
 \resumeSubheading
 {Санкт-Петербургский политехнический университет Петра Великого}{09.2020 -- 06.2024}
 {Бакалавр, ИКНТ, "Программная инженерия", Средний балл: 4.8/5.0}{Санкт-Петербург, Россия}
+
+\resumeSubheading
+{НИУ ИТМО}{09.2024 -- ...}
+{Магистр, ФИТиП, "Информационные системы бизнеса"}{Санкт-Петербург, Россия}
 \resumeSubHeadingListEnd
 
 \section{Дополнительное образование}
@@ -142,10 +146,16 @@ $|$
 {Курс "The basics of Python programming" \\ LETPY}{09.2022 -- 02.2023}
 \resumeSubHeadingListEnd
 
-\section{Опыт 3 года}
+\section{Опыт}
 \resumeSubHeadingListStart
 
-\resumeExpItem {\lineSeparatedText{ООО "НПФ Беркут" (Bercut Ltd.)}{Java-разработчик}}{07.2023 -- ...}
+\resumeExpItem {\lineSeparatedText{ПАО "Сбербанк" / Bell Integrator}{Java-разработчик}}{09.2024 -- ...}
+\resumeItemListStart
+\bulletItem{Я работаю внештатным сотрудником на проекте Sber Business Profile в Сбербанке.}
+\bulletItem{SBP - это огромная единая база данных о клиентах Сбера и его Экосистемы.}
+\resumeItemListEnd
+
+\resumeExpItem {\lineSeparatedText{ООО "НПФ Беркут" (Bercut Ltd.)}{Java-разработчик}}{07.2023 -- 08.2024}
 \resumeItemListStart
 \bulletItem{Работа в отделе автоматизации тестирования включает разработку End-to-End тестов для биллинговой системы, обслуживающую одного из ведущих операторов сотовой связи страны}
 \bulletItem{Рефакторинг кодовой базы тестирующего фреймворка, разработка Unit-тестов, анализ Allure отчетов. Работа с БД PostgreSQl, сборками в Jenkins}
@@ -167,13 +177,13 @@ $|$
 \bulletItem{Работа с bash-скриптами}
 \resumeItemListEnd
 
-\resumeExpItem {\lineSeparatedText{Resume-Bot}{Java-разработчик}}{09.2023 -- 06.2024}
-\resumeItemListStart
-\bulletItem{Написание всей клиентской части бота (команды, состояния, диалог с пользователем, логика записи информации в БД)}
-\bulletItem{Написание FS, HLD документации}
-\bulletItem{Настройка GitHub CI/CD}
-\bulletItem{Разработка Unit-тестов, интеграционных тестов, работа с HH API и LaTeX}
-\resumeItemListEnd
+% \resumeExpItem {\lineSeparatedText{Resume-Bot}{Java-разработчик}}{09.2023 -- 06.2024}
+% \resumeItemListStart
+% \bulletItem{Написание всей клиентской части бота (команды, состояния, диалог с пользователем, логика записи информации в БД)}
+% \bulletItem{Написание FS, HLD документации}
+% \bulletItem{Настройка GitHub CI/CD}
+% \bulletItem{Разработка Unit-тестов, интеграционных тестов, работа с HH API и LaTeX}
+% \resumeItemListEnd
 
 \resumeSubHeadingListEnd
 
