--- a/main_en.tex
+++ b/main_en.tex
@@ -34,7 +34,7 @@
 
 \titleformat{\section}{
     \vspace{-4pt}\raggedright\large\bfseries
-}{}{0em}{}[\color{violet}\titlerule \vspace{-5pt}]
+}{}{0em}{}[\color{YellowGreen}\titlerule \vspace{-5pt}]
 
 \pdfgentounicode=1
 
@@ -106,17 +106,17 @@
 \begin{center}
 \textbf{\huge Korzh Vladislav} \\ \vspace{5pt}
 \small
-\textcolor{violet}{\faMobile} \hspace{.5pt} \href{tel:+79129150633}{+7 912 915 06 33}
+\textcolor{YellowGreen}{\faMobile} \hspace{.5pt} \href{tel:+79129150633}{+7 912 915 06 33}
 $|$
-\textcolor{violet}{\faAt} \hspace{.5pt} \href{mailto:korch937@mail.ru}{korch937@mail.ru}
+\textcolor{YellowGreen}{\faAt} \hspace{.5pt} \href{mailto:korch937@mail.ru}{korch937@mail.ru}
 $|$
-\textcolor{violet}{\faTelegram} \hspace{.5pt} \href{https://t.me/solddddd}{solddddd}
+\textcolor{YellowGreen}{\faTelegram} \hspace{.5pt} \href{https://t.me/solddddd}{solddddd}
 $|$
-\textcolor{violet}{\faLinkedin} \hspace{.5pt} \href{https://www.linkedin.com/in/sold666/}{sold666}
+\textcolor{YellowGreen}{\faLinkedin} \hspace{.5pt} \href{https://www.linkedin.com/in/sold666/}{sold666}
 $|$
-\textcolor{violet}{\faGithub} \hspace{.5pt} \href{https://github.com/sold666}{sold666}
+\textcolor{YellowGreen}{\faGithub} \hspace{.5pt} \href{https://github.com/sold666}{sold666}
 $|$
-\textcolor{violet}{\faMapMarker} \hspace{.5pt} \href{https://maps.app.goo.gl/VvvW63dZxLZH6iVR6}{Saint Petersburg, Russia}
+\textcolor{YellowGreen}{\faMapMarker} \hspace{.5pt} \href{https://maps.app.goo.gl/VvvW63dZxLZH6iVR6}{Saint Petersburg, Russia}
 \end{center}
 
 \section{Education}
@@ -124,6 +124,10 @@ $|$
 \resumeSubheading
 {Peter the Great St.Petersburg Polytechnic University}{09.2020 -- 06.2024}
 {Bachelor's Degree, Computer Science and Information Technology, "Software Engineering", GPA: 4.8/5.0}{Saint Petersburg, Russia}
+
+\resumeSubheading
+{ITMO University}{09.2024 -- ...}
+{Master's Degree, Faculty of Information Technology and Programming, "Business Information Systems"}{St. Petersburg, Russia}
 \resumeSubHeadingListEnd
 
 \section{Additional Education}
@@ -142,10 +146,16 @@ $|$
 {Course "The basics of Python programming" \\ LETPY}{09.2022 -- 02.2023}
 \resumeSubHeadingListEnd
 
-\section{Experience 3 years}
+\section{Experience}
 \resumeSubHeadingListStart
 
-\resumeExpItem {\lineSeparatedText{Bercut Ltd.}{Java developer}}{07.2023 -- ...}
+\resumeExpItem {\lineSeparatedText{Bell Integrator / Sberbank}{Java developer}}{09.2024 -- ...}
+\resumeItemListStart
+\bulletItem{I work as a freelance employee on the Sber Business Profile project at Sberbank.}
+\bulletItem{SBP - is a huge unified database about the customers of Sberbank and its Ecosystem.}
+\resumeItemListEnd
+
+\resumeExpItem {\lineSeparatedText{Bercut Ltd.}{Java developer}}{07.2023 -- 08.2024}
 \resumeItemListStart
 \bulletItem{Work in the automation testing department involving development of End-to-End tests for a billing system serving one of the leading mobile network operators in the country}
 \bulletItem{Refactoring of testing framework codebase, development of Unit tests, analysis of Allure reports. Working with PostgreSQl databases, builds in Jenkins}
@@ -167,13 +177,13 @@ $|$
 \bulletItem{Working with bash scripts}
 \resumeItemListEnd
 
-\resumeExpItem {\lineSeparatedText{Resume-Bot}{Java developer}}{09.2023 -- 05.2024}
-\resumeItemListStart
-\bulletItem{Writing the entire client part of the bot (commands, states, dialog with the user, logic for writing information to the DB)}
-\bulletItem{Writing FS, HLD}
-\bulletItem{Configuring GitHub CI/CD}
-\bulletItem{Developing Unit tests, integration tests, working with HH API and LaTeX}
-\resumeItemListEnd
+% \resumeExpItem {\lineSeparatedText{Resume-Bot}{Java developer}}{09.2023 -- 05.2024}
+% \resumeItemListStart
+% \bulletItem{Writing the entire client part of the bot (commands, states, dialog with the user, logic for writing information to the DB)}
+% \bulletItem{Writing FS, HLD}
+% \bulletItem{Configuring GitHub CI/CD}
+% \bulletItem{Developing Unit tests, integration tests, working with HH API and LaTeX}
+% \resumeItemListEnd
 
 \resumeSubHeadingListEnd
 
